# clarum

./: .gitignore  .gitmodules  CMakeLists.txt
clarum/: CMakeLists.txt
clarum/include/clarum/: clarum.h
clarum/src/: engine.c  handlers.c
docs/: readme.md
example/: CMakeLists.txt
example/src/: main.c
tests/: CMakeLists.txt
tests/src/: interface_tests.c  parser_tests.c  tests.c
